put new FlexboxAnimation file and FlexNav

--- a/Mywork.htm
+++ b/Mywork.htm
@@ -29,7 +29,7 @@
       }
     </style>
   </head>
-
+  <!-- prettier-ignore -->
   <body onload="gotcha('Homepage.htm')" )>
     <div class="tab">
       <span onclick="gotcha('Homepage.htm')">Homepage</span>
@@ -39,9 +39,7 @@
       <span onclick="gotcha('CSS_Flexbox.htm')">CSS Flexbox</span>
       <span onclick="gotcha('CSS表格樣式.htm')">CSS表格樣式</span>
       <span onclick="gotcha('CSS選擇器.htm')">CSS選擇器</span>
-      <span
-        ><a href="https://jojojack.tk/Ajax標籤選單.htm">Ajax 標籤選單</a></span
-      >
+      <span><a href="https://jojojack.tk/Ajax標籤選單.htm">Ajax 標籤選單</a></span>
       <span><a href="/FirstWork.htm">Firstwork</a></span>
       <span><a href="http://jojojack.tk">Frontpage</a></span>
       <span><a href="/canvasdraw.htm">Canvas繪圖</a></span>
@@ -54,81 +52,24 @@
       <span><a href="/Javascript30/Day5_FlexGallery/">JsDay5 Gallery</a></span>
       <span><a href="/Javascript30/Day6_Ajax/">JsDay6 Search!</a></span>
       <span><a href="/Javascript30/Day8_HTML5Canvas/">JsDay8 Canvas</a></span>
-      <span
-        ><a href="/Javascript30/Day10_ShiftKeyCheck/"
-          >JsDay10 Shift Selection</a
-        ></span
-      >
-      <span
-        ><a href="/Javascript30/Day11_VideoPlayer/">JsDay11 HTML Video</a></span
-      >
-      <span
-        ><a href="/Javascript30/Day12_SecretCode/">JsDay12 Surprise MF</a></span
-      >
-      <span
-        ><a href="/Javascript30/Day13_SlideInOnScroll/"
-          >JsDay13 Slide in on scroll</a
-        ></span
-      >
-      <span
-        ><a href="/Javascript30/Day15_LocalStorage/"
-          >JsDay15 Local Storage</a
-        ></span
-      >
-      <span
-        ><a href="/Javascript30/Day16_CSSTextShadow/"
-          >JsDay16 Mouse Shadow</a
-        ></span
-      >
-      <span
-        ><a href="https://jojojack.tk/Javascript30/Day19_WebcamFun/"
-          >JsDay19 Webcam FUNNNN!</a
-        ></span
-      >
-      <span
-        ><a href="https://jojojack.tk/Javascript30/Day20_SpeedRecognition/"
-          >JsDay20 Speech Recognition</a
-        ></span
-      >
-      <span
-        ><a href="https://jojojack.tk/Javascript30/Day21_Geolocation/"
-          >JsDay21 GoePosition</a
-        ></span
-      >
-      <span
-        ><a href="/Javascript30/Day22_FollowAlongLinks/"
-          >JsDay22 Follow Along Links</a
-        ></span
-      >
-      <span
-        ><a href="/Javascript30/Day23_SpeechSynthesis/"
-          >JsDay23 Speech Synthesis</a
-        ></span
-      >
-      <span
-        ><a href="/Javascript30/Day24_StickyNav/">JsDay24 Fixed Nav</a></span
-      >
-      <span
-        ><a href="/Javascript30/Day26_FollowAlongDropdown/"
-          >JsDay26 Follow Along Nav</a
-        ></span
-      >
-      <span
-        ><a href="/Javascript30/Day27_DragScroll/"
-          >JsDay27 Click & Drag</a
-        ></span
-      >
-      <span
-        ><a href="/Javascript30/Day28_VideoSpeed/"
-          >JsDay28 Video Speed Controller UI</a
-        ></span
-      >
-      <span
-        ><a href="/Javascript30/Day29_Countdown/"
-          >JsDay29 Countdown CLock</a
-        ></span
-      >
+      <span><a href="/Javascript30/Day10_ShiftKeyCheck/">JsDay10 Shift Selection</a></span>
+      <span><a href="/Javascript30/Day11_VideoPlayer/">JsDay11 HTML Video</a></span>
+      <span><a href="/Javascript30/Day12_SecretCode/">JsDay12 Surprise MF</a></span>
+      <span><a href="/Javascript30/Day13_SlideInOnScroll/">JsDay13 Slide in on scroll</a></span>
+      <span><a href="/Javascript30/Day15_LocalStorage/">JsDay15 Local Storage</a></span>
+      <span><a href="/Javascript30/Day16_CSSTextShadow/">JsDay16 Mouse Shadow</a></span>
+      <span><a href="https://jojojack.tk/Javascript30/Day19_WebcamFun/">JsDay19 Webcam FUNNNN!</a></span>
+      <span><a href="https://jojojack.tk/Javascript30/Day20_SpeedRecognition/">JsDay20 Speech Recognition</a></span>
+      <span><a href="https://jojojack.tk/Javascript30/Day21_Geolocation/">JsDay21 GoePosition</a></span>
+      <span><a href="/Javascript30/Day22_FollowAlongLinks/" >JsDay22 Follow Along Links</a></span>
+      <span><a href="/Javascript30/Day23_SpeechSynthesis/" >JsDay23 Speech Synthesis</a></span>
+      <span><a href="/Javascript30/Day24_StickyNav/">JsDay24 Fixed Nav</a></span>
+      <span><a href="/Javascript30/Day26_FollowAlongDropdown/">JsDay26 Follow Along Nav</a></span>
+      <span><a href="/Javascript30/Day27_DragScroll/">JsDay27 Click & Drag</a></span>
+      <span><a href="/Javascript30/Day28_VideoSpeed/">JsDay28 Video Speed Controller UI</a></span>
+      <span><a href="/Javascript30/Day29_Countdown/">JsDay29 Countdown CLock</a></span>
       <span><a href="/Javascript30/Day30_Game/">JsDay30 Mole Game</a></span>
+      <span><a href="/FlexboxAnimation/FlexNav">Dropdon Animation</a></span>
     </div>
     <hr />
     <div id="content"></div>
