--- a/FlexboxAnimation/FlexNav/index.html
+++ b/FlexboxAnimation/FlexNav/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="wrapper">
       <header class="top">
-        <h1><a href="#">What The Flexbox?</a></h1>
+        <h1><a href="#">JOJO is the Best</a></h1>
       </header>
 
       <nav class="flex-nav">
@@ -59,7 +59,7 @@
         <form action="" class="signup">
           <input type="text" placeholder="Your Name" />
           <input type="email" placeholder="Email Address" />
-          <input type="submit" value="Sign me up!" />
+          <input type="submit" value="JOJO!" />
         </form>
       </section>
 
