--- a/Mywork.htm
+++ b/Mywork.htm
@@ -70,7 +70,8 @@
       <span><a href="/Javascript30/Day29_Countdown/">JsDay29 Countdown CLock</a></span>
       <span><a href="/Javascript30/Day30_Game/">JsDay30 Mole Game</a></span>
       <span><a href="/FlexboxAnimation/FlexNav">Dropdon Animation</a></span>
-      <span><a href="/JavascriptBeginner/Exercise33">etch-a-sketch</a></span>
+      <span><a href="/JavascriptBeginner/Exercise33_etch">etch-a-sketch</a></span>
+      <span><a href="/JavascriptBeginner/Exercise34_Modal">Modal</a></span>
     </div>
     <hr />
     <div id="content"></div>
