add event listener to turtle

--- a/index.htm
+++ b/index.htm
@@ -162,6 +162,9 @@
 			--rotate: ${rotate}deg;
 			`);
 		}
+		turtle.addEventListener('click', () => {
+			alert('Use keyboard to move the turtle!!')
+		})
 		window.addEventListener("keydown", handleKeyDwon);
 	</script>
 </body>
