--- a/Mywork.htm
+++ b/Mywork.htm
@@ -72,6 +72,8 @@
       <span><a href="/FlexboxAnimation/FlexNav/">Dropdon Animation</a></span>
       <span><a href="/JavascriptBeginner/Exercise33_etch/">etch-a-sketch</a></span>
       <span><a href="/JavascriptBeginner/Exercise34_Modal/click-outside.html">Modal</a></span>
+      <span><a href="https://jojojack.tk/JavascriptBeginner/Exercise55_FaceDetection/face.html">FaceDetection</a></span>
+      
     </div>
     <hr />
     <div id="content"></div>
