--- a/index.htm
+++ b/index.htm
@@ -114,7 +114,9 @@
 		<div class="box">
 			<h2>My Work</h2>
 			<div><a href="Mywork.htm">我的作品</a></div>
-			<div><a href="react_to_do_list">Todo List</a></div>
+			<div><a href="react_to_do_list">React Todo List</a></div>
+			<div><a href="redux_to_do_list">Redux Todo List w/ local-storage</a></div>
+			<div><a href="https://redux-to-do-list.jjj08254.now.sh/t">Redux Todo List w/ firebase</a></div>
 		</div>
 	</div>
 
